<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/void_order"
        android:icon="@drawable/ic_void"
        android:orderInCategory="1"
        android:title="@string/label_menu_void_order"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/reprint"
        android:icon="@drawable/ic_print"
        android:orderInCategory="2"
        android:title="@string/label_menu_reprint"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="4"
        android:title="@string/label_menu_search"
        app:showAsAction="ifRoom|withText"/>

</menu>
