<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/windowBackgroundColorSecondary"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding" >

    <TextView
		android:id="@+id/title"
		android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_void_reason"
        android:textColor="@color/selector_amber_800"
        android:textSize="@dimen/text_size_hover" />

    <View style="?attr/horizontalDivider" />

	<TextView                                             	
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/label_name_qty" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="@dimen/layout_padding"
		android:orientation="horizontal" >

<ImageButton
    android:id="@+id/plus"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="0.5"
    android:src="@drawable/ic_plus"
    android:background="?android:attr/selectableItemBackground" />

    <EditText
        android:id="@+id/text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:maxLength="8"
		android:gravity="center"
        android:inputType="number"
        android:ems="10" >

        <requestFocus />
    </EditText>
	<ImageButton
    android:id="@+id/minus"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="0.5"
    android:src="@drawable/ic_minus"
    android:background="?android:attr/selectableItemBackground" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/red"
            android:text="@string/action_save" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/action_cancel" />
    </LinearLayout>

</LinearLayout>
